crop image with croppie

--- a/assets/css/base-view.css
+++ b/assets/css/base-view.css
@@ -4,6 +4,7 @@
 */
 :root {
     --theme-color: #ff6541;
+    --foreign-color: #1faaf4;
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
