--- a/assets/css/base-view.css
+++ b/assets/css/base-view.css
@@ -19,7 +19,7 @@ html {
     color: var(--text-color);
     font-size: 62.5%;
     box-sizing: border-box;
-    font-family: 'Lato', 'Roboto', sans-serif;
+    /* font-family: 'Lato', 'Roboto', sans-serif !important; */
 }
 
 body {
